[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Items/Helper/ItemBasis.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Items/Helper/EnemyEffectItemBasis.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Items/Effects/circle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 260.92, 255.384 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool is_blinking = false;
uniform float blink_speed = 1.5;
uniform float starded_blinking = 0.0;

void fragment(){
	COLOR = texture(TEXTURE, UV);
	//creates blinking
	COLOR.a = COLOR.a*(1.0- float(is_blinking)* mod(TIME,1.0/blink_speed));//abs(sin(TIME*blink_speed)));
	
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/is_blinking = false
shader_param/blink_speed = 1.5
shader_param/starded_blinking = 0.0

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 0.0

[node name="EnemyAreaEffectItemBasis" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 3 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 4 )

[node name="Blast" type="Tween" parent="." index="5"]

[node name="BlastRadius" type="Sprite" parent="." index="6"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="EffectArea" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea" index="0"]
shape = SubResource( 5 )

[connection signal="tween_completed" from="Blast" to="." method="_on_Blast_tween_completed"]
